--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,16 @@ dependencies = [
     "pytest (>=9.0.2,<10.0.0)",
     "factory-boy (>=3.3.3,<4.0.0)",
     "django (>=6.0.2,<7.0.0)",
-    "djangorestframework (>=3.16.1,<4.0.0)"
+    "djangorestframework (>=3.16.1,<4.0.0)",
+    "django-extensions (>=4.1,<5.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+dev = [
+    "pytest-django (>=4.12.0,<5.0.0)"
+]
